Fix very very critical sonar alert